added ui elemnts

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock_Paper_Scissors_Game</title>
-    <script src="script.js"></script>
+   
 </head>
 <body>
     <h1>Rock_Paper_Scissors_Game</h1>
+    <button class="rockBtn">Rock</button>
+    <button class="paperBtn">Paper</button>
+    <button class="scissorsBtn">Scissors</button>
+    <div class="displayResults">results will appear here!</div>
+    <script src="script.js"></script>
     
 </body>
 </html>
